# example-automatica

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE
examples/: pid.rs  ss.rs  tf2ss.rs
src/: lib.rs  pid_controller.rs
