[package]
name = "example-automatica"
version = "0.0.1-develop"
authors = ["kflange <zknsftk1msrk@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
automatica = "*"
thiserror = "1"

[[example]]
name = "tf2ss"
